docs/book/samples/ch04/ninth.out
error[endpoint]: unhandled err reached main: "missing index 9"
  born in main at ninth.kso:3
