docs/book/samples/ch04/ninth.kso
flavors = ["matcha" "ube" "hojicha"]
print "ninth: {flavors[9]!}"
